Fix: Jumpy UI. Set fixed height for inspector and truncate text.

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -27,3 +27,10 @@ body {
   padding: 2em;
   background-color: #fff;
 }
+
+.inspector-content {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 1.2em;
+  white-space: nowrap;
+}
